feat: add documentation for opening routes
