# handler/delete-opening.go
@@ -8,7 +8,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
 
+// @Summary Delete opening
+// @Description Delete a new job opening
+// @Tags openings
+// @Accept json
+// @Produce json
+// @Param id path string true "Opening ID"
+// @Success 200 {object} OpeningResponseModel
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening/{id} [DELETE]
 func DeleteOpeningHandler(context *gin.Context) {
 	id := context.Param("id")
 
